# pyghlight

./: .gitignore  LICENSE  README.md  pyghlight.py  pyproject.toml  setup.cfg  setup.py
src/pyghlight/: __init__.py  pyghlight.py
