[project]
name = "pyghlight"
version = "0.3.1"
description = "a simple wrapper for pygments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygments>=2.18.0,<3",
    "setuptools>=75.6.0",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default

[project.scripts]
pyghlight = "pyghlight.pyghlight:main"
