[metadata]
name = pyghlight
version = attr: pyghlight.__version__
url = https://github.com/r-ikota
license = BSD License
author = Ryo Ikota
author_email = r.ikota.mt@gmail.com
description = "a simple wrapper for pygments"
platforms = any
keywords = "syntax highlighting"
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
zip_safe = false
include_package_data = true
python_requires = >=3.8

install_requires = 
    pygments>=2.15.0,<3

[options.packages.find]
where = src
    
[options.entry_points]
console_scripts =
    pyghlight = pyghlight.pyghlight:main


